# polytope

./: .gitignore  README.md
benchmarks/: benchmark.py  compilation_strategy.py  example_generator.py  execution_strategy.py  main.py
benchmarks/examples/: arr_red.c  dithering.c  gauss_jordan.c  lcs.c  loop_interchange.c  mat_mul.c  trans_clos.c  wiki.c
compiler/: CMakeLists.txt  header.hpp  main.cpp  parser.h
compiler/sandbox/: code.txt  generator.h  lexer.h  parser.h
compiler/scripts/: ast_dump.sh
examples/: main.py  requirements.txt  utils.py
examples/dependency_graphs/: graph_plotter.py
examples/tests/: tests.py
examples/transforms/: basic.py  dither.py  floyd_warshall.py  hnf.py  lcs.py
polytope-pass/: ArrayAssignment.h  CMakeLists.txt  IntegerSolver.h  Polytope.cpp  Polytope.h  main.cpp
polytope-pass/output/: test.c  test.ll  test_opt.ll  test_poly_opt.ll
polytope-pass/scripts/: benchmark.sh  cfg.sh  run.sh
src/: IntegerSolver.h  LoopDependencies.h  Polytope.cpp  Polytope.h  main.cpp
src/output/: test.c  test.ll  test_opt.ll  test_poly_opt.ll  triple_loop.c
src/scripts/: cfg.sh  run.sh
